k8s-cluster-configuration/applications/dan/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dan-page-service
  namespace: dan
spec:
  selector:
    app: dan-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
