k8s-cluster-configuration/applications/dan/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dan-page-gateway
  namespace: dan
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "dan.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: dan.k6nis.dev
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: dan-page-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dan-page
  namespace: dan
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: dan-page-gateway
      namespace: dan
  hostnames:
    - dan.k6nis.dev
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: dan-page-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
